# nixos

./: .gitignore  Conventions.md  LICENSE  README.md  TODO.md  flake.nix  install.sh  result  result-man
.ltree/: 15-07-2026_00:04:45.json
.orphaned/todo/: 13-07-2026.todo
.store/: venvs.json
Backup/: dolphinrc  lookup-db  mybar-theme.env  sudo-blacklist.conf  vscode-settings.json
Documentation/Bugfixes/: dolphin-openwith-and-gwenview-theming.md  usb-hub-reset-stutter.md
Documentation/Features/: hyprland-kitty-motion-tuning.md
Fastfetch/: colors.env  config-flex.jsonc  config.jsonc
Hyprland/: hyprland.lua
Hyprland/Floating/: main.sh  sourceMe.conf  sourceMe.lua
Installation/: build-iso.sh  format.sh  setup.sh
Kitty/: customkitty.conf  kitty.conf
Mpv/: mpv.conf
Mpv/script-opts/: uosc.conf
Neovim/: init.lua  install.sh  lazy-lock.json
Nixos/: configuration.nix  hardware-configuration.nix  home.nix  iso.nix  partitioning.nix  variables.nix
Nixos/.ltree/: 14-07-2026_01:21:17.json  15-07-2026_20:55:46.json  16-07-2026_21:15:04.json  18-07-2026_17:25:48.json  19-07-2026_18:53:58.json  20-07-2026_00:25:13.json
Nixos/config/: config.nix  customized.nix  default.nix  excludes.nix  packages.nix  programs.nix  scripts.nix  services.nix  shells.nix
Nixos/docs/: disko-wiring-verification.md  formatting-disk.md  header-comments-nix.md
Nixos/home/: apps.nix  hyprland-plugins.nix  shells.nix  theming.nix
Nixos/modules/: default.nix
Quickshell/MyBar/: CLUES.md  README.md  TODO.md  backend.nix  keybind_defaults.env  main.sh  shell.qml  variables.env.example
Scripts/: FWM.sh  configWar.sh  cycleMode.sh  defaultApps.sh  defaultWS.sh  screenshot.sh  scrollMaximize.sh
Scripts/Backup/: backup.sh
Scripts/CRun/: README.md  build.rs  flake.nix
Scripts/CRun/CRun/: Cargo.toml  install.ps1  install.sh
Scripts/CRun/CRun/docs/: README.md  architecture.md  build-system-detection.md  error-handling.md  language-packs.md  testing.md
Scripts/CRun/CRun/src/: compile.rs  main.rs  testrun.rs
Scripts/CRun/CRun/src/languages/c/: test.rs
Scripts/CRun/CRun/src/languages/cpp/: test.rs
Scripts/CRun/CRun/src/languages/cs/: config.rs  deps.rs  test.rs
Scripts/CRun/CRun/src/languages/go/: config.rs  deps.rs  test.rs
Scripts/CRun/CRun/src/languages/objc/: config.rs  test.rs
Scripts/CRun/CRun/src/languages/swift/: deps.rs  test.rs
Scripts/CRun/CRun/src/languages/zig/: config.rs  deps.rs
Scripts/Casket/: Cargo.toml  README.md  flake.nix  main.py
Scripts/Casket/.old/: info.md
Scripts/Casket/docs/: architecture.md  cli.md  metadata-format.md  porting-notes.md  usage.md
Scripts/Casket/glossar/: glossary.md
Scripts/Casket/src/: btrfs.rs  cli.rs  config.rs  ctx.rs  error.rs  help.rs  keyfile_mount.rs  luks.rs  main.rs  meta.rs  proc.rs  prompt.rs  secret.rs  size.rs  udisks.rs  vault.rs
Scripts/Casket/src/commands/: close.rs  close_all.rs  create.rs  delete.rs  encryption.rs  info.rs  list.rs  mod.rs  open.rs  passwd.rs  rename.rs  resize.rs  toggle.rs  twofa.rs
Scripts/Casket/src/commands/backup/: auto.rs  manual.rs  mod.rs
Scripts/LTree/: README.md  flake.nix
Scripts/Pacnix/: main.sh
Scripts/Reload/: qsr.sh  theme.py
Scripts/Run/: run.sh
Scripts/Secrets/: secrets.sh
Scripts/Seed/: .gitignore  .obignore  CHANGELOG.md  README.md  TERMS.md  TRADEMARK.md  flake.nix  install.sh  (+1 more)
VSCode/: extensions.txt  keybindings.json  settings.json
test/: .envrc
(+883 files in other folders)
